--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,9 +2,10 @@ version: '3'
 
 services:
   db:
-     image: mysql:5.7
+     image: mysql:8
      volumes:
        - db_data:/var/lib/mysql
+       - ./dockerfiles/init_db:/docker-entrypoint-initdb.d
      restart: always
      environment:
        MYSQL_ROOT_PASSWORD: 1q2w3e
